Update cotisation logic + rename LoginPanel to WelcomePanel